--- a/machinelearning/index.html
+++ b/machinelearning/index.html
@@ -4,7 +4,7 @@
 
 {% include head.html %}
 {% include navbar.html %}
-{% include sidebar.html %}
+{% include sidebar_start.html %}
 <div class="posts">
     {% for category in site.categories %} 
     {% if category[0] == "machinelearning" %}
@@ -37,5 +37,5 @@
   {% endif %}
 {% endfor %}
 </div>
-
+{% include sidebar_end.html %}
 {% include foot.html %}
