--- a/sapui5/index.html
+++ b/sapui5/index.html
@@ -1,12 +1,13 @@
 ---
 # no title/section/description; use defaults.
 category: "sapui5"
-pagination:
-enabled: true
-collection:
+pagination: 
+  enabled: true
+  category: sapui5
 ---
 
 {% include head.html %}
+{% include mathjax_support.html %}
 {% include navbar.html %}
 {% include sidebar.html %}
 <div class="posts">
